# WiringPi

./: .editorconfig  .gitignore  Android.bp  Application.mk  CMakeLists.txt  COPYING.LESSER  INSTALL  INSTALL.md  People  README.TXT  README.md  Update VERSION to 2.71  VERSION  build  description  do-git.sh  flake.nix  newVersion  reinstall  rpi.cmake  update  update.md  version.h
.github/workflows/: build.yml
Release/: README.md  WiringPi_lib-2.32.0-Linux.deb
cmake/: get-version.cmake  toolchain-rpi.cmake
debian/: .gitignore  changelog  control  copyright  libwiringpi-dev.install  libwiringpi2.install  libwiringpi2.shlibs  libwiringpi3.shlibs  rules  watch  wiringpi.docs  wiringpi.install
debian-template/wiringPi/: control_template
debian-template/wiringPi/DEBIAN/: control  postinst  postrm
devLib/: CMakeLists.txt  Makefile  ds1302.c  ds1302.h  font.h  gertboard.c  gertboard.h  lcd.c  lcd.h  lcd128x64.c  lcd128x64.h  maxdetect.c  maxdetect.h  piFace.c  piFace.h  piFaceOld.c  piGlow.c  piGlow.h  piNes.c  piNes.h  scrollPhat.c  scrollPhat.h  scrollPhatFont.h
documentation/deutsch/: functions.md
documentation/english/: functions.md
examples/: 28BYJ-48.c  Makefile  README.TXT  blink-thread.c  blink.c  blink.rtb  blink.sh  blink12.c  blink12drcs.c  blink6drcs.c  blink8-drcn.c  blink8.c  buttons.c  buttons2.c  buttons3.c  buttons4.c  clock.c  delayTest.c  ds1302.c  gertboard.c  getBanks.c  header.h  isr-osc.c  isr.c  isr1.c  isr3.c  isr_debounce.c  lcd-adafruit.c  lcd.c  lowPower.c  max31855.c  nes.c  okLed.c  piface.c  pwm.c  rht03.c  serialRead.c  serialTest.c  servo-reset.sh  servo-test.sh  (+14 more)
examples/Gertboard/: 7segments.c  Makefile  buttons.c  gertboard.c  record.c  temperature.c  voltmeter.c  vumeter.c
examples/PiFace/: Makefile  blink.c  buttons.c  ladder.c  metro.c  motor.c  reaction.c
examples/PiGlow/: Makefile  piGlow0.c  piGlow1.c  piglow.c
examples/q2w/: Makefile  binary.c  blink-io.c  blink.c  blink.sh  bright.c  button.c  volts.c
examples/scrollPhat/: Makefile  scphat.c  test.c
gpio/: .Makefile.swp  CMakeLists.txt  CPi.h  CPi_readall.c  Makefile  extensions.c  extensions.h  gpio  gpio.1  gpio.c  newVersion  pins.c  pintest  readall.c  test.sh  version.h
pins/: CMakeLists.txt  Makefile  pins.tex
wiringPi/: .wiringPiFace.c.swp  CMakeLists.txt  CMakeLists.txt~  Makefile  README  ads1115.c  ads1115.h  bmp180.c  bmp180.h  drc.c  drc.h  drcNet.c  drcNet.h  drcSerial.c  drcSerial.h  ds1302.h  ds18b20.c  ds18b20.h  gertboard.c  gertboard.h  htu21d.c  htu21d.h  khadas_edge.c  khadas_edge.h  khadas_vim1.c  khadas_vim1.h  khadas_vim2.c  khadas_vim2.h  khadas_vim3.c  khadas_vim3.h  lcd.c  lcd.h  lcd128x64.h  libwiringPi.so.1.0  max31855.c  max31855.h  max5322.c  max5322.h  maxdetect.h  mcp23008.c  (+67 more)
wiringPi/test/: Makefile  wiringpi_i2c_test1_pcf8574.c  wiringpi_piface_test1.c  wiringpi_spi_test1_mcp3202.c  wiringpi_test0_version.c  wiringpi_test10_sensor.c  wiringpi_test1_device.c  wiringpi_test1_sysfs.c  wiringpi_test2_device.c  wiringpi_test2_sysfs.c  wiringpi_test3_device.c  wiringpi_test3_device_wpi.c  wiringpi_test4_device.c  wiringpi_test4_device_phys.c  wiringpi_test5_default.c  wiringpi_test6_isr.c  wiringpi_test7_bench.c  wiringpi_test7_version.c  wiringpi_test8_pwm.c  wiringpi_test9_pwm.c  wiringpi_xotest_test1_spi.c  wpi_test.h
wiringPiD/: CMakeLists.txt  Makefile  daemonise.c  daemonise.h  drcNetCmd.h  network.c  network.h  runRemote.c  runRemote.h  wiringpid  wiringpid.c
